--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4145,5 +4145,27 @@
         <target>Links in eigenen Posts automatisch klickbar machen</target>
       </segment>
     </unit>
+    <unit id="5bKzAvY" name="Neuen Threads automatisch abonnieren">
+      <notes>
+        <note category="german">Neuen Threads automatisch abonnieren</note>
+        <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Neuen Threads automatisch abonnieren</source>
+        <target>Neuen Threads automatisch abonnieren</target>
+      </segment>
+    </unit>
+    <unit id=".jLeZb1">
+      <notes>
+        <note category="german">Ist diese Option aktiviert, abonnierst du automatisch allen Threads, die du selbst erstellt hast. Du kannst das Abonnement deiner Threads jederzeit manuell beenden.</note>
+        <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Ist diese Option aktiviert, abonnierst du automatisch allen Threads, die du selbst erstellt hast. Du kannst das Abonnement deiner Threads jederzeit manuell beenden.</source>
+        <target>Ist diese Option aktiviert, abonnierst du automatisch allen Threads, die du selbst erstellt hast. Du kannst das Abonnement deiner Threads jederzeit manuell beenden.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
