--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -1179,7 +1179,7 @@
     <unit id="JUr1eVI" name="{d} Tage">
       <notes>
         <note category="german">{d} Tage</note>
-        <note category="from">twig:///templates/ajax/soul/import_preview.html.twig</note>
+        <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig;twig:///templates/ajax/soul/import_preview.html.twig</note>
       </notes>
       <segment>
         <source>{d} Tage</source>
@@ -4167,9 +4167,8 @@
     </unit>
     <unit id="5bKzAvY" name="Neuen Threads automatisch abonnieren">
       <notes>
-        <note category="german">Neuen Threads automatisch abonnieren</note>
+        <note category="german">Neue Threads automatisch abonnieren</note>
         <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Neuen Threads automatisch abonnieren</source>
@@ -4180,7 +4179,6 @@
       <notes>
         <note category="german">Ist diese Option aktiviert, abonnierst du automatisch allen Threads, die du selbst erstellt hast. Du kannst das Abonnement deiner Threads jederzeit manuell beenden.</note>
         <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Ist diese Option aktiviert, abonnierst du automatisch allen Threads, die du selbst erstellt hast. Du kannst das Abonnement deiner Threads jederzeit manuell beenden.</source>
